--- a/front/src/styles/CllientsPage.css
+++ b/front/src/styles/CllientsPage.css
@@ -11,13 +11,15 @@
     margin-left:5rem;
 }
 
-
+.ant-row{
+    margin:auto important!;
+}
 
 
 .clientsPageCard{
     display: flex;
     flex-direction: row;
-    justify-content: center;
+    justify-content: center;justify-self: center;justify-items: center;
     align-content: center;
     margin-top:2rem;
 }
